added apps to settings.py

--- a/cuina/templates/base.html
+++ b/cuina/templates/base.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <title>{% block title %}PedRie{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
 
