--- a/cuina/home/templates/home/home.html
+++ b/cuina/home/templates/home/home.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="ca">
-<head>
-  <meta charset="utf-8">
-  <title>{{ titol }}</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}PedRie - Home{% endblock %}
+{% block content %}
   <div class="container">
     <h1>{{ titol }}</h1>
 
@@ -32,5 +28,4 @@
     {% endif %}
 
   </div>
-</body>
-</html>
+{% endblock %}
