--- a/cuina/home/templates/home/home.html
+++ b/cuina/home/templates/home/home.html
@@ -2,28 +2,21 @@
 {% block title %}PedRie - Home{% endblock %}
 {% block content %}
   <div class="container">
-    <h1>{{ titol }}</h1>
-
+    
     <!-- PÁGINA HOME -->
     {% if pagina == 'home' %}
+    <h1>Home</h1>
       <div class="info">
         <h2>Benvinguts a la cuina PedRie!</h2>
         <p>Clica en una recepta o afegeix una de nova </p>
-        
-        <div class="personatges-list">
-          {% for personatge in personatges %}
-            <div class="personatge-card">
-              <p><a href="{% url 'personatges:personatge' personatge.key %}">{{ personatge.nom }}</a></p>
-            </div>
-          {% endfor %}
-        </div>
       </div>
 
     <!-- PÁGINA ERROR -->
     {% elif pagina == 'error' %}
+      <h1>Error</h1>
       <div class="info">
         <p>{{ missatge }}</p>
-        <p><a href="{% url 'personatges:home' %}">Tornar al inici</a></p>
+        <p><a href="{% url 'home' %}">Tornar al inici</a></p>
       </div>
     {% endif %}
 
