--- a/cuina/static/css/base.css
+++ b/cuina/static/css/base.css
@@ -5,12 +5,13 @@ body {
 }
 
 .site-header {
-    background-color: #f2f2f2;
+    background-color: #fff6ee;
     padding: 15px 0;
-    border-bottom: 1px solid #ddd;
 }
 
 .nav-bar {
+    display: flex;
+    flex-direction: row;
     max-width: 1200px;
     margin: auto;
     display: flex;
@@ -18,6 +19,12 @@ body {
     align-items: center;
     gap: 20px;
     padding: 0 20px;
+}
+
+.navbar_logo {
+    display: flex;
+    max-width: 10em;
+    max-height: 10em;
 }
 
 .nav-left a,
@@ -36,7 +43,7 @@ body {
 }
 
 .site-footer {
-    background-color: #f2f2f2;
+    background-color: #fff6ee;
     padding: 20px 0;
     font-size: 14px;
 }
