--- a/cuina/templates/base.html
+++ b/cuina/templates/base.html
@@ -10,6 +10,10 @@
 <header class="site-header">
     <nav class="nav-bar">
         <div class="nav-left">
+            <!-- He hecho que el logo lleve al home también, pa que lo sepas sin más -->
+            <a href="/">
+                <img class="navbar_logo" src="../static/images/Logo2.png" />
+            </a>
             <a href="/">Home</a>
             <a href="/faqs/">FAQs</a>
         </div>
