--- a/cuina/templates/base.html
+++ b/cuina/templates/base.html
@@ -7,26 +7,7 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
-<header class="site-header">
-    <nav class="nav-bar">
-        <a href="/">
-            <img class="navbar_logo" src="../static/images/Logo2.png" />
-        </a>
-        <div class="nav-left">
-            <a href="/">Home</a>
-            <a href="/faqs/">FAQs</a>
-        </div>
-        <div class="nav-right">
-            {% if user.is_authenticated %}
-                <a href="/logout/">Logout</a>
-                <a href="/recipes/">Receptes</a>
-                <a href="/enter_recipes/">Crear una recepta</a>
-            {% else %}
-                <a href="/login/">Login</a>
-            {% endif %}
-        </div>
-    </nav>
-</header>
+    {% block navbar %}{% include 'include/navbar.html' %}{% endblock %}
 
 <main>
     {% block content %}{% endblock %}
