--- a/cuina/home/templates/home/home.html
+++ b/cuina/home/templates/home/home.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}PedRie - Home{% endblock %}
+{% block extra_css %}<link rel="stylesheet" href="{% static 'home/css/home.css' %}">{% endblock %}
 {% block content %}
-  <div class="container">
+  <div class="container home-page">
     
     <!-- PÁGINA HOME -->
     {% if pagina == 'home' %}
