--- a/cuina/recipes/templates/recipes/recipes.html
+++ b/cuina/recipes/templates/recipes/recipes.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}PedRie - Receptes{% endblock %}
+{% block extra_css %}<link rel="stylesheet" href="{% static 'recipes/css/recipes.css' %}">{% endblock %}
 {% block content %}
-  <div class="container">
+  <div class="container recipes-page">
 
     <!-- PÁGINA RECEPTES -->
     {% if pagina == 'recipes' or pagina == 'home' %}
