CSS navbar + added real images

--- a/cuina/recipes/templates/recipes/recipes.html
+++ b/cuina/recipes/templates/recipes/recipes.html
@@ -16,19 +16,39 @@
       <div class="info">
         <ul>
           <li>
-            <strong>Truita de patates</strong> · 30 min · 4 racions
+            <img class="recipe-thumb" src="{% static 'recipes/images/truita.png' %}" alt="Truita de patates" width="120" height="90" />
+            <div>
+              <strong>Truita de patates</strong><br />
+              30 min · 4 racions
+            </div>
           </li>
           <li>
-            <strong>Pa amb tomàquet i pernil</strong> · 10 min · 2 racions
+            <img class="recipe-thumb" src="{% static 'recipes/images/pa-amb-tomaquet.png' %}" alt="Pa amb tomàquet i pernil" width="120" height="90" />
+            <div>
+              <strong>Pa amb tomàquet i pernil</strong><br />
+              10 min · 2 racions
+            </div>
           </li>
           <li>
-            <strong>Escudella catalana</strong> · 2 h · 6 racions
+            <img class="recipe-thumb" src="{% static 'recipes/images/escudella.png' %}" alt="Escudella catalana" width="120" height="90" />
+            <div>
+              <strong>Escudella catalana</strong><br />
+              2 h · 6 racions
+            </div>
           </li>
           <li>
-            <strong>Fideuà de marisc</strong> · 45 min · 4 racions
+            <img class="recipe-thumb" src="{% static 'recipes/images/fideua.png' %}" alt="Fideuà de marisc" width="120" height="90" />
+            <div>
+              <strong>Fideuà de marisc</strong><br />
+              45 min · 4 racions
+            </div>
           </li>
           <li>
-            <strong>Crema catalana</strong> · 50 min · 6 racions
+            <img class="recipe-thumb" src="{% static 'recipes/images/crema-catalana.png' %}" alt="Crema catalana" width="120" height="90" />
+            <div>
+              <strong>Crema catalana</strong><br />
+              50 min · 6 racions
+            </div>
           </li>
         </ul>
       </div>
