--- a/cuina/recipes/static/recipes/css/recipes.css
+++ b/cuina/recipes/static/recipes/css/recipes.css
@@ -6,9 +6,10 @@
     flex-wrap: nowrap;
 }
 
-.recipes-page .info ul li img {
-    width: 84px;
-    height: 60px;
+.recipes-page .info ul li img,
+.recipes-page .info ul li .recipe-thumb {
+    width: 120px;
+    height: 90px;
     object-fit: cover;
     border-radius: 12px;
     border: 1px solid #f2e0cf;
@@ -27,8 +28,8 @@
     }
 
     .recipes-page .info ul li img {
-        width: 72px;
-        height: 52px;
+        width: 96px;
+        height: 72px;
     }
 }
 
