Main pages content fix

--- a/cuina/faqs/templates/faqs/faqs.html
+++ b/cuina/faqs/templates/faqs/faqs.html
@@ -17,23 +17,23 @@
         <ul>
           <li>
             <strong>Com puc afegir una recepta?</strong><br />
-            Ves a “Nova recepta” i omple el formulari.
+            Ves a "Nova recepta" i omple el formulari.
           </li>
           <li>
             <strong>Puc desar una recepta com a esborrany?</strong><br />
-            Sí, utilitza el botó “Desar esborrany”.
+            Sí, utilitza el botó "Desar esborrany".
           </li>
           <li>
-            <strong>Quins formats d’imatge s’accepten?</strong><br />
+            <strong>Quins formats d'imatge s'accepten?</strong><br />
             Acceptem JPG, PNG i WEBP.
           </li>
           <li>
             <strong>On puc veure totes les receptes?</strong><br />
-            A la secció “Receptes” del menú principal.
+            A la secció "Receptes" del menú principal.
           </li>
           <li>
             <strong>Com puc editar una recepta publicada?</strong><br />
-            Obre la recepta i fes clic a “Editar”.
+            Obre la recepta i fes clic a "Editar".
           </li>
         </ul>
       </div>
